--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "build": "npm i",
     "dev": "NODE_ENV=DEV && node --trace-warnings src/server.js | pino-pretty",
     "scrape": "node --trace-warnings src/utils/scraper/index.js | pino-pretty",
     "prod": "NODE_ENV=PROD && node --trace-warnings src/server.js"
