--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "@jsugg/sr3",
   "version": "0.9",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js.js",
   "scripts": {
     "test": "jest",
-    "build": "npm i",
-    "dev": "NODE_ENV=DEV && node --trace-warnings src/server.js | pino-pretty",
-    "scrape": "node --trace-warnings src/utils/scraper/index.js | pino-pretty",
-    "prod": "[ ! -d 'logs' ] && mkdir logs && NODE_ENV=PROD && node --trace-warnings src/server.js"
+    "cert": "sh ./scripts/cert-gen.sh",
+    "install": "npm i && npm run build",
+    "build": "rollup -c ./config/rollup.config.js",
+    "dev": "npm run build && bash ./scripts/dev.sh",
+    "scrape": "node src/utils/scraper/index.js | pino-pretty",
+    "prod": "npm run build && NODE_ENV=production && node src/server.js"
   },
   "keywords": [],
   "author": "Juan Sugg",
@@ -30,13 +32,25 @@
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
     "pino-pretty": "^10.0.0",
-    "pm2": "^5.3.0",
     "random-useragent": "^0.5.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/cron": "^2.0.1",
     "@types/random-useragent": "^0.3.1",
-    "jest": "^29.5.0"
+    "install": "^0.13.0",
+    "jest": "^29.5.0",
+    "npm": "^9.7.1",
+    "purgecss": "^5.0.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy-merge": "^1.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-purgecss": "^5.0.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.1"
   }
 }
