--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "src/server.js.js",
   "scripts": {
     "test": "jest",
-    "cert": "sh ./scripts/cert-gen.sh",
-    "install": "npm i && npm run build",
+    "cert": "sh ./scripts/dev.sh",
     "build": "rollup -c ./config/rollup.config.js",
-    "dev": "npm run build && bash ./scripts/dev.sh",
+    "dev": "npm run build && NODE_ENV=development node --trace-warnings 'src/server.js' | pino-pretty",
     "scrape": "node src/utils/scraper/index.js | pino-pretty",
     "prod": "npm run build && NODE_ENV=production && node src/server.js"
   },
