--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm i && rollup -c ./config/rollup.config.js",
     "dev": "npm run build && NODE_ENV=development node --trace-warnings 'src/server.js' | pino-pretty",
     "scrape": "node src/utils/scraper/index.js | pino-pretty",
-    "prod": "npm run build && NODE_ENV=production && node src/server.js"
+    "prod": "npm run build && NODE_ENV=production && node --trace-warnings 'src/server.js' | pino-pretty"
   },
   "keywords": [],
   "author": "Juan Sugg",
